--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,18 @@ intro a {
     color: black;
 }
 
+intro a:hover {
+    text-decoration: underline;
+}
+
+.aboutintro a {
+    text-decoration: none;
+}
+
+.aboutintro a:hover {
+    text-decoration: underline;
+}
+
 nav {
     padding: 10px;
     position: fixed;
@@ -53,6 +65,11 @@ nav {
 
 nav a {
     color: black;
+    text-decoration: none;
+}
+
+nav a:hover {
+    text-decoration: underline;
 }
 
 header, intro {
@@ -82,6 +99,11 @@ header, intro {
 
 .desc a {
     color: black;
+    text-decoration: underline;
+}
+
+.desc a:hover {
+    text-decoration: none;
 }
 
 .about {
