--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,4 @@
-header {
-    margin-left: 10px;
-}
-
 header img {
-    margin-right: 20px;
-    max-width: 200px;
     transition: 0.70s;
     -webkit-transition: 0.70s;
     -moz-transition: 0.70s;
@@ -47,6 +41,18 @@ intro a:hover {
 }
 
 .aboutintro a:hover {
+    text-decoration: underline;
+}
+
+.links a {
+    text-decoration: underline;
+}
+
+.links a:hover {
+    text-decoration: none;
+}
+
+#experience c {
     text-decoration: underline;
 }
 
@@ -152,6 +158,18 @@ container img {
     position: absolute;
 }
 
+#mail {
+    position: fixed;
+    bottom: 0;
+    left: 10;
+    margin-bottom: 10px;
+    padding: 3px;
+}
+
+#hiddennav {
+    visibility: hidden;
+}
+
 
 @media screen and (max-width: 750px) {
     header img {
@@ -163,6 +181,7 @@ container img {
     }
     
     nav {
+        visibility: hidden;
         font-size: 15px;
         right: 0;
         text-align: right;
@@ -187,5 +206,17 @@ container img {
     .art-grid-container {
         grid-template-columns: 97%;
         padding-right: 0%;
+    }
+    
+    #mail {
+        visibility: visible;
+        right: 0;
+        margin-right: 50px;
+        margin-bottom: 20px;
+        bottom: 0;
+    }
+    
+    #hiddennav {
+        visibility: visible;
     }
 }
