--- a/web/main/main.css
+++ b/web/main/main.css
@@ -1,13 +1,12 @@
 header img {
-    padding-top: 6px;
-/*    transition: 0.70s;
+    transition: 0.70s;
     -webkit-transition: 0.70s;
     -moz-transition: 0.70s;
     -ms-transition: 0.70s;
-    -o-transition: 0.70s;*/
+    -o-transition: 0.70s;
 }
 
-/*header img:hover {
+header img:hover {
   transition: 0.70s;
   -webkit-transition: 0.70s;
   -moz-transition: 0.70s;
@@ -18,7 +17,7 @@ header img {
   -o-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
   transform: rotate(360deg);
-} */
+} 
 
 intro {
     font-family: neue-haas-grotesk-display, sans-serif;
