--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 header img {
     padding-top: 6px;
+    width: 50%;
 /*    transition: 0.70s;
     -webkit-transition: 0.70s;
     -moz-transition: 0.70s;
